chore: bump Map.of to Collections.singletonMap
Signed-off-by: peefy <xpf6677@163.com>